@@ -16,6 +16,7 @@ Changelog
  * Fix: Ensure link to add a new user works when no users are visible in the users list (LB (Ben Johnston))
  * Fix: `AbstractEmailForm` saved submission fields are now aligned with the email content fields, `form.cleaned_data` will be used instead of `form.fields` (Haydn Greatnews)
  * Fix: Removed ARIA `role="table"` from TableBlock output (Thibaud Colas)
+ * Fix: Set Cache-Control header to prevent page preview responses from being cached (Tomas Walch)
 
 
 2.9 (xx.xx.xxxx) - IN DEVELOPMENT
